Aligning projects and fixing gallery

--- a/public/styles/projects.css
+++ b/public/styles/projects.css
@@ -22,12 +22,16 @@ body {
     width: 85%;
     padding: 20px;
     color: white;
+    justify-items: center; 
+    align-items: center; 
 }
 
 #projects-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
+    justify-items: center; 
+    align-items: center; 
 }
 
 .project-item {
